// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnSelector NOT Read-only Renders and loads column names 1`] = `
<ColumnSelector
  getColNames={[Function]}
  isReadOnly={false}
  revision={101}
  saveState={[Function]}
  selectedCols="foo,bar,baz"
>
  <div
    className="container mb-3"
  >
    <div
      className="row"
    >
      <div
        className="checkbox-container"
        style={
          Object {
            "whiteSpace": "nowrap",
          }
        }
      >
        <input
          checked={false}
          data-name="foo,bar,baz,wow,word wrap,ok then"
          disabled={false}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="ml-3 t-d-gray checkbox-content content-3"
        >
          foo,bar,baz,wow,word wrap,ok then
        </span>
      </div>
    </div>
  </div>
</ColumnSelector>
`;

exports[`ColumnSelector Read-only Renders and loads column names 1`] = `
<ColumnSelector
  getColNames={[Function]}
  isReadOnly={true}
  revision={101}
  saveState={[Function]}
  selectedCols="foo,bar,baz"
>
  <div
    className="container mb-3"
  >
    <div
      className="row"
    >
      <div
        className="checkbox-container"
        style={
          Object {
            "whiteSpace": "nowrap",
          }
        }
      >
        <input
          checked={false}
          data-name="foo,bar,baz,wow,word wrap,ok then"
          disabled={true}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="ml-3 t-d-gray checkbox-content content-3"
        >
          foo,bar,baz,wow,word wrap,ok then
        </span>
      </div>
    </div>
  </div>
</ColumnSelector>
`;
